# IOTLOGGER

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.heltec_wifi_lora_32_V3  sdkconfig.heltec_wifi_lora_32_V3.old
components/FlashDB/: CMakeLists.txt
components/FlashDB/inc/: fal_cfg.h  fdb_cfg.h
components/FlashDB/port/: fal_flash_esp32_port.c
components/FlashDB/port/fal/src/: fal_partition.c
lib/flashdb_config/: CMakeLists.txt
lib/flashdb_config/include/: fal_cfg.h
lib/flashdb_config/src/: fal_flash_esp32_port.c
main/: CMakeLists.txt  idf_component.yml  main.c
src/: CMakeLists.txt  idf_component.yml  main.c
src/main/: CMakeLists.txt  main.c
webui/: index.html  script.js  style.css
